# policyengine-observability

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: bump_version.py  copilot-instructions.md  fetch_version.py  get-changelog-diff.sh  publish-git-tag.sh
.github/workflows/: pr.yml  push.yml
changelog.d/: 15.added.md  5.changed.md  ai-harness.added.md  ci-cd.added.md  google-cloud-logging.added  google-cloud-logging.added.md  google-cloud-stage3-runbook.changed.md  internal-dispatch-timings.fixed.md  otel-switch.breaking.md  release-workflow-docs.changed.md  segment-aggregation-and-static-attrs.added.md
docs/engineering/skills/: README.md  github-prs.md  repository-guidance.md
docs/operations/: google-cloud-stage3-runbook.md
policyengine_observability/: __init__.py  config.py  context.py  google_credentials.py  logging.py  runtime.py  segments.py
policyengine_observability/adapters/: __init__.py  fastapi.py  flask.py
policyengine_observability/destinations/: __init__.py  base.py  google_cloud_logging.py  manager.py  stdout.py
policyengine_observability/integrations/: __init__.py  httpx.py
tests/: test_destinations.py  test_fastapi_adapter.py  test_flask_adapter.py  test_google_credentials.py  test_public_api.py  test_release_scripts.py  test_runtime.py
