[project]
name = "policyengine-observability"
version = "0.1.0"
description = "Shared PolicyEngine observability runtime for logs, timings, metrics, and OpenTelemetry."
readme = "README.md"
authors = [{ name = "PolicyEngine", email = "hello@policyengine.org" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
]
otlp-grpc = [
    "opentelemetry-exporter-otlp-proto-grpc",
]
otlp-http = [
    "opentelemetry-exporter-otlp-proto-http",
]
flask = [
    "flask>=2.2",
]
fastapi = [
    "fastapi",
    "opentelemetry-instrumentation-fastapi",
]
httpx = [
    "opentelemetry-instrumentation-httpx",
]
all = [
    "fastapi",
    "flask>=2.2",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
]
dev = [
    "pytest",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_observability"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
