[project]
name = "policyengine-observability"
version = "1.0.0"
description = "Shared PolicyEngine observability runtime for logs, timings, metrics, and OpenTelemetry."
readme = "README.md"
authors = [{ name = "PolicyEngine", email = "hello@policyengine.org" }]
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
]

[project.optional-dependencies]
otel = []
otlp-grpc = []
otlp-http = []
flask = [
    "flask>=2.2",
]
fastapi = [
    "fastapi",
]
httpx = [
    "httpx",
]
all = [
    "fastapi",
    "flask>=2.2",
    "httpx",
]
dev = [
    "build",
    "coverage",
    "pytest",
    "ruff>=0.9.0",
    "towncrier>=24.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_observability"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["policyengine_observability"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.towncrier]
package = "policyengine_observability"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
